<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/grand_content_layout"
        android:layout_width="450dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/id_seat_model_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/list_item_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/list_item_max_seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/list_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:textColor="#000000" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/licence_color_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/list_item_licence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/list_item_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:textColor="#000000"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="14dp"
        android:background="@drawable/ic_baseline_delete_forever_24px"
        android:backgroundTint="#000000"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/modify_btn"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@id/delete_btn"
        android:background="@drawable/ic_baseline_edit_24px"
        android:backgroundTint="#000000"

        android:textColor="#FFFFFF" />

</RelativeLayout>
