<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddVehicleActivity"
    tools:showIn="@layout/activity_add_vehicle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="New Vehicle"
            android:textColor="@android:color/black"
            android:textSize="40sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                app:srcCompat="@drawable/ic_baseline_directions_car_24px"/>

            <EditText
                android:id="@+id/vehicle_model"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="MODEL"
                android:paddingLeft="20dp"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_web_asset_24px"/>

            <EditText
                android:id="@+id/vehicle_licence"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="LICENCE"
                android:paddingLeft="20dp"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_color_lens_24px"/>

            <Spinner
                android:id="@+id/vehicle_color"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:entries="@array/colors"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_event_seat_24px"/>

            <Spinner
                android:id="@+id/vehicle_number_of_seats"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:entries="@array/number_seats"></Spinner>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />
        <Button
            android:id="@+id/to_add_vehicle"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:onClick="addNewVehicle"
            android:text="ADD THIS VEHICLE! "
            android:textColor="@android:color/white" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />
        <TextView
            android:id="@+id/vehicle_error"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>