<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.VehicleFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:paddingLeft="10sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="My Vehicles"
                android:textColor="#000000"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/refresh_vehicle"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/ic_baseline_system_update_24px"
                    android:backgroundTint="#000000"
                    android:textColor="#FFFFFF"
                    android:textSize="10dp" />

                <Button
                    android:id="@+id/add_vehicle"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/refresh_vehicle"
                    android:background="@drawable/ic_baseline_add_box_24px"
                    android:backgroundTint="#000000"
                    android:textColor="#FFFFFF"
                    android:textSize="10dp" />
            </RelativeLayout>


        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:outlineAmbientShadowColor="#000000" />
        <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefresh_vehicle"
            android:layout_width="match_parent"
            android:layout_height="580dp">

            <ListView
                android:id="@+id/listview_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_weight="1" />



    </LinearLayout>



</RelativeLayout>