...
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_person_pin_black_24dp" />

                <EditText
                    android:id="@+id/loginnameText"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/UsernameHint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
...
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_lock_outline_black_24dp"/>

                <EditText
                    android:id="@+id/loginpasswordText"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PasswordHint"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
...

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:onClick="login"
                android:text="@string/LoginButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
...
