<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".FullscreenActivity_login">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:focusable="true" android:focusableInTouchMode="true"
                android:layout_width="0px" android:layout_height="0px">
                <requestFocus />
            </LinearLayout>

            <ImageView
                android:id="@+id/loginLOGO"
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                app:srcCompat="@mipmap/transportation_vehicle_icon_512" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_person_pin_black_24dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/UsernameHint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColorLink="@color/black_overlay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_lock_outline_black_24dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PasswordHint"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColorLink="@color/black_overlay" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginerror"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:text="@string/loginError"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/rmbMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:buttonTint="@android:color/white"
                android:gravity="center"
                android:text="@string/rememberMe"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@color/darkblue"
                android:onClick="login"
                android:text="@string/LoginButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                android:textColorLink="@color/black_overlay" />

            <TextView
                android:id="@+id/tosignup"
                android:layout_width="287dp"
                android:layout_height="50dp"
                android:layout_marginTop="17dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="toSignup"
                android:text="@string/ToSignup"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSecondary"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>